CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2017, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.1.7
-----
System
* Windowed Ublu supported but not compiled by default
* Goublu support for Go language Ublu console (https://github.com/jwoehr/goublu)

1.1.6 2017-06-01
-----
System
* Option processing improved

Commands
* BREAK - bug fixed, didn't work with nested blocks > 1
* cim and cimi for Common Information Model (added)
* calljava
	* -class
	* -forname
* dq now uses wait on -peek and -read
* eval
	* now does it as Long
        * added inc and dec
        * fixed bug where - mistaken for dash-command
* file greatly enhanced
* ftp command rewritten, new specifications
	* previous ftp command is now called 'oldftp'
* interpreter new command for interpreter debugging
* record greatly enhanced
* streamf new command for stream files on local system
* string
    * -pad
    * escape and unescape allow java-like string escapes
* tuple
	* -assign
        * -type returns class object
	* handle the tuple stack on -true -false -null
	
Examples
* clHelp.ublu
* delspoolf.ublu
* test/cimtest.ublu

Extensions
* ux.format.ublu
* ux.cim.property.ublu
* ux.objectlock.ublu

1.1.5 2016-12-31
-----
General
* Taylor C. Richberger taywee@gmx.com has begun enhancing Ublu code and fixing
various shortfalls, e..g, see his work on the calljava and dpoint commands.

System
* default tuples
	* @true
	* @false
* interpreter
	* allow quoted strings as function arguments
	* allow blocks as function arguments

Commands
* general
	* more cleanup
	* ublu.includepath property management
* individual commands
	* calljava
		* properly deals with interfaces
	* db
		* -columnnames
		* bug: -bytes
	* dpoint
		* WARNING status now has message
		* dpoint allows a crit and warn alert comparator to work without value 
	* dta command for data areas
	* file
	    * -createdds
	    * -createfmt
	    * -lock
	    * -unlock