@@ -2,9 +2,8 @@
 
 <html>
 <head>
-  <meta name="generator" content=
-  "HTML Tidy for Linux (vers 25 March 2009), see www.w3.org">
-  <meta name="generator" content="Bluefish 2.2.7">
+  <meta name="generator" content="Bluefish 2.2.7" >
+  <meta name="generator" content="Bluefish 2.2.7" >
   <meta content="text/html; charset=us-ascii" http-equiv=
   "Content-Type">
   <meta http-equiv="Last-Modified" content=
@@ -13276,9 +13275,9 @@ PF
       <li><code>-rline</code> reads and puts a line of
       characters.</li>
 
-      <li><code>-read ~@{offset} ~@{length}</code> reads the file
-      at <em>offset</em> for <em>length</em> bytes and puts them as
-      an array of bytes.</li>
+      <li><code>-read ~@{length}</code> reads the next <em>length</em> bytes
+      of the file puts them as an array of bytes. The file should be opened
+      RB.</li>
 
       <li><code>-write ~@{data} ~@{offset} ~@{length}</code> write
       to the file at <em>offset</em> for <em>length</em> bytes.
