@@ -8,6 +8,9 @@ System
 * Windowed Ublu supported but not compiled by default
 * Goublu support for Go language Ublu console (https://github.com/jwoehr/goublu)
 
+Commands
+* streamf -read (byte reads)
+
 1.1.6 2017-06-01
 -----
 System
